# Planeks-test

./: .gitignore  README.md  pyproject.toml
comments/: forms.py  models.py  views.py
comments/migrations/: 0001_initial.py  0002_auto_20191014_2153.py
news_posts/: admin.py  forms.py  models.py  tasks.py  urls.py  validators.py  views.py
news_posts/migrations/: 0001_initial.py
news_posts/templates/: new_comment.html  news_post_create.html  news_post_delete.html  news_post_detail.html  news_post_list.html  news_post_update.html
news_service/: celery.py  settings.py  urls.py
templates/: base.html  title.html
user_accounts/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
user_accounts/migrations/: 0001_initial.py
user_accounts/templates/: activate_account.html  activate_account_email.html  activate_account_success.html
user_accounts/templates/registration/: login.html  signup.html
