[tool.poetry]
name = "news-service"
version = "0.1.0"
description = ""
authors = ["Serge Zavizion <zavizionsergey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2.6"
celery = "^4.3.0"
django-crispy-forms = "^1.7"
pillow = "^6.2"
django-ckeditor = "^5.7"
django-contrib-comments = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
